# z2m-log-parser

./: .gitignore  README.md  pyproject.toml  z2m-log-parser.py
.github/workflows/: python-publish.yml
src/z2m_log_parser/: __init__.py  z2m_log_parser.py
tests/: test_z2m_log_parser.py
