[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "z2m_log_parser"
version = "0.0.22"
authors = [
  { name="Stoyan Dimitrov", email="stdimitrov@gmail.com" },
]
description = "Parser for Zigbee2Mqtt logs to python object for further processing"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/st0yanDimitrov/z2m_log_parser"
Issues = "https://github.com/st0yanDimitrov/z2m_log_parser/issues"
